--- a/tutorials-cpd-wmla/CPD3.5.0-wmla-api-submitting-hyperparameter-optimization.ipynb
+++ b/tutorials-cpd-wmla/CPD3.5.0-wmla-api-submitting-hyperparameter-optimization.ipynb
@@ -6,16 +6,16 @@
     "id": "61cc2996-0474-4263-8d8c-17a6121f20d3"
    },
    "source": [
-    "# Automated Hyperparameter Optimization Training using WMLA API\n",
+    "# Automated Hyperparameter Optimization Training using WML Accelerator API\n",
     "\n",
-    "#### Notebook created by Kelvin Lui, Nov 2020\n",
+    "#### Created by Kelvin Lui, November 2020\n",
     "&nbsp;\n",
     "&nbsp;\n",
     "&nbsp;\n",
     "&nbsp;\n",
     "&nbsp;\n",
     "\n",
-    "In this notebook, you will learn how to submit a model and dataset to the Watson Machine Learning Accelerator (WMLA) API to run Hyper Parameter Optimization (HPO). In this particular example, we will be using the Pytorch MNIST HPO model as our training model, inject hyperparameters for the sub-training during search and submit a tuning metric for better results, and then query for the best job results. This notebook runs on Python 3.6 or 3.7.\n",
+    "In this notebook, you will learn how to submit a model and dataset to the Watson Machine Learning Accelerator (WML Accelerator) API to run Hyperparameter Optimization (HPO). In this example, we will use the PyTorch MNIST HPO model as our training model, inject hyperparameters for sub-training during search and submit a tuning metric for better results, and then query for the best job results. This notebook runs on Python 3.6 or 3.7 and works with WML Accelerator version 2.2.0. \n",
     "\n",
     "\n",
     "![options](https://github.com/IBM/wmla-learning-path/raw/master/shared-images/WMLA-RestAPI-Demo.png)"
@@ -32,7 +32,7 @@
     "![SpectrumComputeFamily_Conductor-HorizontalColorWhite.png](https://raw.githubusercontent.com/IBM/wmla-learning-path/master/shared-images/hpo.png)\n",
     "\n",
     "\n",
-    "For this notebook you will use a model and dataset that have already been set up to leverage the API.  For details on the API see [API Documentation](https://www.ibm.com/support/knowledgecenter/en/SSFHA8_1.2.1/cm/deeplearning.html) in the Knowledge Center (KC)."
+    "In this notebook you will use a model and dataset that have already been set up to leverage the API.  For more details on the API, see [API Documentation](https://www.ibm.com/support/knowledgecenter/en/SSFHA8_2.2.0/cm/deeplearning.html) in the IBM Knowledge Center."
    ]
   },
   {
@@ -41,19 +41,17 @@
     "id": "8871b562-dab2-4b34-b687-c2bc5690d5a8"
    },
    "source": [
-    "## Table of contents\n",
+    "## Contents:\n",
     "\n",
-    "1. [Setup](#setup)<br>\n",
+    "1. [Setup and import](#setup)<br>\n",
     "\n",
     "2. [Configuring environment and project details](#configure)<br>\n",
     "\n",
-    "3. [Health Check](#health)<br>\n",
+    "3. [Running a health check](#health)<br>\n",
     "\n",
-    "4. [Training with the HPO API](#train)<br>\n",
+    "4. [Training with HPO](#train)<br>\n",
     "\n",
-    "5. [Deploy the HPO task](#deploy)<br>\n",
-    "\n",
-    "6. [Find best job results](#best)<br>"
+    "5. [Deploying the HPO task](#deploy)<br>\n"
    ]
   },
   {
@@ -63,7 +61,7 @@
    },
    "source": [
     "<a id = \"setup\"></a>\n",
-    "## Step 1: Setup\n"
+    "## Step 1: Setup and import\n"
    ]
   },
   {
@@ -81,7 +79,7 @@
     "id": "b9198850-8c95-4511-8bb6-95883d18bcc3"
    },
    "source": [
-    "To use the WMLA API, we will be using the Python requests library."
+    "To use the WML Accelerator API, we will be using the Python requests library."
    ]
   },
   {
@@ -141,7 +139,7 @@
     "id": "32fc507f-b95c-4990-ba27-6d229302815b"
    },
    "source": [
-    "Provide your credentials in this cell, including your cluster url, username and password, and instance group."
+    "Configure your environment and project details to obtain your API endpoints and set up a requests session. Provide your credentials in this cell, including: cluster URL, username and password. "
    ]
   },
   {
@@ -182,9 +180,9 @@
     "id": "178dd87a-b87e-47d3-ac52-444eb63bbd76"
    },
    "source": [
-    "Here we will get and print out the API endpoints and setup requests session.   The following sections use the Watson ML Accelerator API to complete the various tasks required. We've given examples of a number of tasks but you should refer to the documentation at to see more details of what is possible and sample output you might expect.\n",
+    "Use the API endpoint and setup requests session information that was printed in the following sections. The following sections use the WML Accelerator API to complete various required tasks. You can find more examples of a number of tasks in https://www.ibm.com/support/knowledgecenter/SSFHA8_2.2.0/cm/deeplearning.html.\n",
     "\n",
-    "    - https://www.ibm.com/support/knowledgecenter/SSFHA8_2.2.0/cm/deeplearning.html\n",
+    "    \n",
     "   \n",
     "\n"
    ]
@@ -250,7 +248,7 @@
    },
    "source": [
     "<a id = \"health\"></a>\n",
-    "## Step 3: Health Check"
+    "## Step 3: Running a health check"
    ]
   },
   {
@@ -259,7 +257,7 @@
     "id": "883f9208-d810-46b6-9855-7d94d4946399"
    },
    "source": [
-    "In this step, we will check if there are any existing HPO tasks and also verify the platform health."
+    "In this step, we will run a health check to verify if there are any existing HPO tasks still running and also to verify platform health."
    ]
   },
   {
@@ -270,7 +268,7 @@
    "source": [
     "Rest API: `GET platform/rest/deeplearning/v1/hypersearch`\n",
     "- `Description`: Get all the HPO tasks that the login user can access.\n",
-    "- `OUTPUT`: A list of HPO tasks and each one with the same format which can be found in the api doc."
+    "- `OUTPUT`: A list of HPO tasks and each one with the same format which can be found in the API documentation."
    ]
   },
   {
@@ -325,18 +323,18 @@
    },
    "source": [
     "<a id = \"train\"></a>\n",
-    "## Step 4: Training with the HPO API\n",
+    "## Step 4: Training with HPO\n",
     "\n",
     "\n",
-    "The WMLA framework requires 2 changes to your code to support the HPO API, and these are:\n",
+    "Use the HPO API to run training with WML Accelerator. First, WML Accelerator framework requires 2 changes to your code to support the HPO API, and these are:\n",
     "\n",
-    "* Inject hyperparameters for the sub-training during search\n",
+    "* Inject hyperparameters for sub-training during search\n",
     "* Retrieve sub-training result metric\n",
     "\n",
     "Note that the code sections below show a comparison between the \"before\" and \"HPO enabled\" versions of the code by using `diff`.\n",
     "\n",
     "\n",
-    "1. Import the dependent libararies:\n",
+    "1. Import the dependent libraries:\n",
     "\n",
     "&nbsp;\n",
     "&nbsp;\n",
@@ -347,7 +345,7 @@
     "2. Get the WMLA cluster `DLI_DATA_FS`, `RESULT_DIR` and `LOG_DIR` for the HPO training job. The `DLI_DATA_FS` can be used for shared data placement, the `RESULT_DIR` can be used for final model saving, and the `LOG_DIR` can be used for user logs and monitoring.\n",
     "\n",
     "&nbsp;\n",
-    "**Note**: `DLI_DATA_FS` is set when installing the DLI cluster; `RESULT_DIR` and `LOG_DIR` is generated by WMLA for each HPO experiment.\n",
+    "**Note**: `DLI_DATA_FS` is set when installing the cluster; `RESULT_DIR` and `LOG_DIR` is generated by WML Accelerator for each HPO experiment.\n",
     "\n",
     "&nbsp;\n",
     "&nbsp;\n",
@@ -355,7 +353,7 @@
     "&nbsp;\n",
     "&nbsp;\n",
     "\n",
-    "3. Replace the hyperparameter definition code by reading hyperparameters from the `config.json` file. the `config.json` is generated by WMLA HPO, which contains a set of hyperparameter candidates for each tuning jobs. The hyperparameters and the search space is defined when submitting the HPO task. For example, here the hyperparameter `learning_rate` is set to tune:\n",
+    "3. Replace the hyperparameter definition code by reading hyperparameters from the `config.json` file. The `config.json` is generated by WML Accelerator HPO, which contains a set of hyperparameter candidates for each tuning jobs. The hyperparameters and the search space is defined when submitting the HPO task. For example, here the hyperparameter `learning_rate` is set to tune:\n",
     "\n",
     "&nbsp;\n",
     "&nbsp;\n",
@@ -368,19 +366,19 @@
     "&nbsp;\n",
     "&nbsp;\n",
     "\n",
-    "4.  Write the tuning result into `val_dict_list.json` under `RESULT_DIR`. WMLA HPO will read this file for each tuning job to get the metric values. Define a `test_metrics` list to store all metric values and pass the epoch parameter to the test function. Then you can add the metric values to the `test_metrics` list during the training test process. Please note that the metric names should be specified when submitting the HPO task, and be consistent with the code here.\n",
+    "4.  Write the tuning result into `val_dict_list.json` under `RESULT_DIR`. WML Accelerator HPO will read this file for each tuning job to get the metric values. Define a `test_metrics` list to store all metric values and pass the epoch parameter to the test function. Then you can add the metric values to the `test_metrics` list during the training test process. Please note that the metric names should be specified when submitting the HPO task, and be consistent with the code here.\n",
     "&nbsp;\n",
     "For example, at the HPO task submit request, `loss` will be used as the objective metric the tuning will try to minimize the `loss`:\n",
     "\n",
     "```\n",
     "'algoDef': # Define the parameters for search algorithms  \n",
     "{\n",
-    "    # Name of the search algorithm, one of Random, Bayesian, Tpe, Hyperband  \n",
+    "    # Name of the search algorithm, one of Random, Bayesian, TPE, Hyperband  \n",
     "    'algorithm': 'Random',   \n",
     "    # Name of the target metric that we are trying to optimize when searching hyper-parameters.\n",
     "    # It is the same metric name that the model update part 2 trying to dump.\n",
     "    'objectiveMetric' : 'loss',\n",
-    "    # Strategy as how to optimize the hyper-parameters, minimize means to find better hyper-parameters to\n",
+    "    # Strategy as how to optimize the hyperparameters, minimize means to find better hyperparameters to\n",
     "    # make the above objectiveMetric as small as possible, maximize means the opposite.\n",
     "    'objective' : 'minimize',\n",
     "    ...\n",
@@ -415,9 +413,9 @@
    },
    "source": [
     "\n",
-    "## Create script to pass to WMLA via API\n",
+    "## Create a script to pass batch jobs to WMLA\n",
     "\n",
-    "This section creates a script external to this notebook which runs the batch jobs on the WMLA servers."
+    "This section creates a script external to this notebook which runs the batch jobs on the WML Accelerator servers."
    ]
   },
   {
@@ -444,7 +442,7 @@
     "id": "4aedb708572b4f4087601703d05aace5"
    },
    "source": [
-    "The next cell uses the writefile magic to create a script externally to this notebook in the location defined in working_directory above."
+    "The next cell uses `writefile` to create a script external to this notebook in the location defined in `working_directory` above."
    ]
   },
   {
@@ -644,16 +642,17 @@
    },
    "source": [
     "<a id = \"deploy\"></a>\n",
-    "## Step 5: Deploy the HPO task"
+    "## Step 5: Deploying the HPO task"
    ]
   },
   {
    "cell_type": "markdown",
+   
    "metadata": {
     "id": "751e4151-21f1-4b9e-b8fa-40e6441ac6ab"
    },
    "source": [
-    "Here we package up our model to send to the API for HPO.  \n",
+    "To deploy the HPO task, the model files need to be packaged together in a .tar file and sent to the API for HPO.   \n",
     "\n",
     "\n",
     "\n",
@@ -663,7 +662,7 @@
     "- Content-type: Multi-Form\n",
     "- Multi-Form Data:\n",
     "  - files: Model file\n",
-    "  - form-filed: {‘data’: ‘String format of input parameters to start hpo task, let’s call it as **hpo_input** and show its specification later’}\n"
+    "  - form-filed: {‘data’: ‘String format of input parameters to start HPO task, let’s call it as **hpo_input** and show its specification later’}\n"
    ]
   },
   {
@@ -683,7 +682,7 @@
    "source": [
     "Package the updated model files into a tar file ending with `.modelDir.tar`\n",
     "\n",
-    "REST API expects a `modelDir.tar` with the model code inside ..\n"
+    "The API expects a `modelDir.tar` with the model code inside.\n"
    ]
   },
   {
@@ -713,7 +712,7 @@
     "id": "9c71a04f-7b3e-4229-ac50-113d5403b71b"
    },
    "source": [
-    "**hpo_input** will be in Python `dict` or `json` format as shown below, and will convert to string when calling REST."
+    "**hpo_input** will be in Python `dict` or `json` format (shown below), and will convert to a string format when REST is called."
    ]
   },
   {
@@ -1044,8 +1043,8 @@
     "id": "b6250529-6651-4be2-8f07-4d4e65be908d"
    },
    "source": [
-    "#### Notebook Complete \n",
-    "Congratulations, you have completed our demonstration of using WMLA for distributed hyperparameter optimization search"
+    "#### Notebook completion \n",
+    "Congratulations, you have completed our demonstration of using WML Accelerator for distributed hyperparameter optimization search."
    ]
   },
   {
